<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#272343"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/QuestionNumber"
        android:text="@string/question_number1"
        android:layout_marginTop="30dp"
        android:textColor="#ffa384"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        >
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_option"
            android:id="@+id/selectedoption"
            android:gravity="center"
            android:paddingEnd="90dp"
            android:textColor="#ffffff"
            android:paddingRight="90dp">

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CorrectAnswer"
            android:textColor="#ffffff"
            android:layout_gravity="end"
            android:text="@string/correct_answer"
            android:gravity="center"
            />

     </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:id="@+id/question"
            android:text="@string/question1"
            android:textSize="22sp"
            />

    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/FirstTwoOption"
         android:layout_gravity="center"
         android:paddingLeft="50dp"
         android:paddingRight="50dp"
         android:orientation="vertical">

         <TextView
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:id="@+id/OptionA"
             android:text="@string/question1_A"
             android:textColor="@color/black"
             android:textAlignment="center"
             android:gravity="center_horizontal"
             android:paddingTop="14dp"
             android:background="@drawable/optiondesign"
             />

         <TextView
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:id="@+id/OptionB"
             android:text="@string/question1_B"
             android:textColor="@color/black"
             android:textAlignment="center"
             android:gravity="center_horizontal"
             android:paddingTop="14dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/optiondesign"
             />

     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LastTwoOption"
        android:layout_gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/OptionC"
            android:text="@string/question1_C"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:paddingTop="14dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/optiondesign"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/OptionD"
            android:text="@string/question1_D"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:paddingTop="14dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/optiondesign"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Scorecard"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/score"
            android:layout_gravity="end"
            android:padding="10dp"
            >

        </TextView>
        <ProgressBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffa384"
            android:layout_gravity="bottom"
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:indeterminate="false">

        </ProgressBar>
    </LinearLayout>

</LinearLayout>